--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "unbuild"
+    "build": "unbuild",
+    "test": "node test/index.js"
   },
   "license": "MIT",
   "devDependencies": {
