--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dbqb",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "description": "mysql query builder",
   "type": "module",
   "exports": {
@@ -22,10 +22,20 @@
   "license": "MIT",
   "devDependencies": {
     "@types/lodash": "^4.14.182",
+    "sequelize": "^6.25.5",
+    "sequelize-typescript": "^2.1.5",
     "unbuild": "^0.9.4"
   },
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "peerDependencies": {
+    "sequelize": "^6.25.5"
+  },
+  "peerDependenciesMeta": {
+    "sequelize": {
+      "optional": true
+    }
   },
   "homepage": "https://github.com/i31pc17/dbqb",
   "repository": {
