--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "exports": {
     ".": {
       "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    },
+    "./sequelize": {
+      "require": "./dist/sequelize.cjs",
+      "import": "./dist/sequelize.mjs",
+      "types": "./dist/sequelize.d.ts"
     }
   },
   "main": "./dist/index.cjs",
